# rcr

./: AppSettings.cpp  AppSettings.h  BoxName.cpp  BoxName.h  CMakeLists.txt  CONTRIBUTING.md  DatabaseList.cpp  DatabaseList.h  HISTORY  MeasureUnit.cpp  MeasureUnit.h  QueryProperties.cpp  QueryProperties.h  RCQuery.cpp  RCQuery.h  RCQueryProcessor.cpp  RCQueryProcessor.h  README.md  RcrCredentials.cpp  RcrCredentials.h  SpreadSheetHelper.cpp  SpreadSheetHelper.h  StockOperation.cpp  StockOperation.h  diagram.uxf  log.h  platform.h  plugins.h  rcr-ws.cpp  rcr-ws.h  sqlite-helper.cpp  sqlite-helper.h  string-helper.cpp  string-helper.h  vcpkg.json.txt
cli/: box.cpp  grpcClient.cpp  grpcClient.h  grpcclient.cpp  grpcclient.h  mkdb.cpp  onewayticketcli.cpp  rcr-cli.cpp
cmake/: FindODB.cmake
dart/: pubspec.yaml
example-plugins/: login-ad.cpp
google-tests/: CMakeLists.txt  test1.cpp
gtests/: CMakeLists.txt  README.google-tests.md  test-measure-unit.cpp
gtests/lib/: CONTRIBUTING.md
gtests/lib/docs/: faq.md
gtests/lib/googletest/include/gtest/: gtest-death-test.h
gtests/lib/googletest/src/: gtest-death-test.cc
odb/: class-template.h  odb-views.h  options.pgsql  pragmas.pgsql.hxx  repeatedptrfield-traits.hxx
po/: box.ru_RU.UTF-8.po  mkdb.ru_RU.UTF-8.po  mkdb.ru_RU.UTF-8.po~  rcr-cli.pot  rcr-cli.ru_RU.UTF-8.po  rcr-svc.ru_RU.UTF-8.po
proto/: mgp.proto  rcr.proto
python/: rcr_client.py
rcrql/: rcrq.cpp  rcrql-example.cpp  rcrql.cpp
svc/: SSLValidator.cpp  SSLValidator.h  daemonize.cpp  daemonize.h  login-plugin.cpp  login-plugin.h  passphrase.cpp  (+7 more)
(+17 files in other folders)
